finish example